# claude-bicycle

./: .gitignore  PLAN.md  README.md  SETUP.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: engineer.md  meta.md  oracle.md  reviewer.md
agents/: base.agent.md  base.context.md  engineer.agent.md  engineer.context.md  meta.agent.md  oracle.agent.md  oracle.context.md  this.base.agent.md  this.engineer.agent.md  this.meta.agent.md  this.oracle.agent.md
agents/principles/: engineering.md
agents/state/inboxes/: engineer.md  meta.md  oracle-daemon.md  oracle.md
agents/tools/: inbox.py
hooks/: no-auto-memory.py  no-new-md-files.py
src/: agent_name.py  inbox.py
