[project]
name = "agent-framework"
version = "0.1.0"
description = "Lightweight agent coordination system for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
    "filelock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
